added example project, added validation to Add, some reorg

--- a/CMSprinkle/CMSprinkle.csproj
+++ b/CMSprinkle/CMSprinkle.csproj
@@ -20,6 +20,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Couchbase.Extensions.DependencyInjection" Version="3.4.13" />
+		<PackageReference Include="Couchbase.Transactions" Version="1.1.1" />
 		<PackageReference Include="HtmlSanitizer" Version="8.0.746" />
 		<PackageReference Include="Markdig" Version="0.33.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.25" />
