some tests/tweaks for the Add extension method

--- a/CMSprinkle.Tests/CMSprinkle.Tests.csproj
+++ b/CMSprinkle.Tests/CMSprinkle.Tests.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="UnitTests\Infrastructure\ServiceCollectionExtensionsTests\" />
     <Folder Include="UnitTests\SprinkleControllerTests\" />
   </ItemGroup>
 
