--- a/CMSprinkle.Couchbase/CMSprinkle.Couchbase.csproj
+++ b/CMSprinkle.Couchbase/CMSprinkle.Couchbase.csproj
@@ -1,18 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Couchbase.Extensions.DependencyInjection" Version="3.4.13" />
+    <PackageReference Include="Couchbase.Transactions" Version="1.1.1" />
+    <PackageReference Include="CouchbaseNetClient" Version="3.4.13" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CMSprinkle.Couchbase\CMSprinkle.Couchbase.csproj" />
-    <ProjectReference Include="..\CMSprinkle.SqlServer\CMSprinkle.SqlServer.csproj" />
     <ProjectReference Include="..\CMSprinkle\CMSprinkle.csproj" />
   </ItemGroup>
 
