--- a/CMSprinkle.Couchbase.Tests/CMSprinkle.Couchbase.Tests.csproj
+++ b/CMSprinkle.Couchbase.Tests/CMSprinkle.Couchbase.Tests.csproj
@@ -18,11 +18,10 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Testcontainers.Couchbase" Version="3.6.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\testcontainers-dotnet\src\Testcontainers.Couchbase\Testcontainers.Couchbase.csproj" />
-    <ProjectReference Include="..\..\testcontainers-dotnet\src\Testcontainers\Testcontainers.csproj" />
     <ProjectReference Include="..\CMSprinkle.Couchbase\CMSprinkle.Couchbase.csproj" />
   </ItemGroup>
 
