--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,61 +12,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out code-
-      uses: actions/checkout@v2
-
+    - uses: actions/checkout@v4
+    
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '8.0.x'
-
+    
     - name: Restore dependencies
-      run: dotnet restore CMSprinkle
-
+      run: dotnet restore
+    
     - name: Build
-      run: dotnet build CMSprinkle --no-restore
-
-  unittests:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '8.0.x'
-
+      run: dotnet build --no-restore -c Release
+    
     - name: Test
-      run:  dotnet test CMSprinkle.Tests\CMSprinkle.Tests.csproj --no-build --verbosity normal
-
-  integrationtests_couchbase:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '8.0.x'
-
-    - name: Test
-      run: dotnet test CMSprinkle.Couchbase.Tests\CMSprinkle.Couchbase.Tests.csproj --no-build --verbosity normal
-
-  integrationtests_sqlserver:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '8.0.x'
-
-    - name: Test
-      run: dotnet test CMSprinkle.SqlServer.Tests\CMSprinkle.SqlServer.Tests.csproj --no-build --verbosity normal
+      run: dotnet test --no-build -c Release
