--- a/CMSprinkle/CMSprinkle.csproj
+++ b/CMSprinkle/CMSprinkle.csproj
@@ -8,7 +8,8 @@
 		<Title>CMSprinkle</Title>
 		<Version>0.9.0</Version>
 		<Description>CMSprinkle is a micro-CMS (Content Management System) designed for quick integration with ASP.NET Core applications. It allows developers to easily incorporate managed content into ASP.NET MVC Razor pages, perfect for applications requiring a _sprinkle_ of dynamic content management.</Description>
-		<Copyright>Matthew D. Groves</Copyright>
+		<Copyright>Matthew D. Groves 2023-present</Copyright>
+		<Authors>Matthew D. Groves</Authors>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<RepositoryType>https://github.com/mgroves/CMSprinkle</RepositoryType>
 		<PackageTags>CMS;content</PackageTags>
