narrow down just to main CMSprinkle project

--- a/.github/workflows/cmsprinkle_nuget.yml
+++ b/.github/workflows/cmsprinkle_nuget.yml
@@ -15,13 +15,13 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore CMSprinkle/CMSprinkle.csproj
 
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore CMSprinkle/CMSprinkle.csproj
 
     - name: Pack
-      run: dotnet pack --no-build --output nupkgs
+      run: dotnet pack --no-build --output nupkgs CMSprinkle/CMSprinkle.csproj
 
     - name: Publish
       run: dotnet nuget push nupkgs/*.nupkg --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
