--- a/.github/workflows/cmsprinkle_nuget.yml
+++ b/.github/workflows/cmsprinkle_nuget.yml
@@ -18,10 +18,10 @@ jobs:
       run: dotnet restore CMSprinkle/CMSprinkle.csproj
 
     - name: Build
-      run: dotnet build --no-restore CMSprinkle/CMSprinkle.csproj
+      run: dotnet build --no-restore -c Release -v d CMSprinkle/CMSprinkle.csproj
 
     - name: Pack
-      run: dotnet pack --no-build --output nupkgs CMSprinkle/CMSprinkle.csproj
+      run: dotnet pack --no-build -c Release -v d --output nupkgs CMSprinkle/CMSprinkle.csproj
 
     - name: Publish
       run: dotnet nuget push nupkgs/*.nupkg --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
