--- a/CMSprinkle.SqlServer/CMSprinkle.SqlServer.csproj
+++ b/CMSprinkle.SqlServer/CMSprinkle.SqlServer.csproj
@@ -4,6 +4,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+		<Title>CMSprinkle.SqlServer</Title>
+		<Version>0.9.0</Version>
+		<Description>CMSprinkle is a micro-CMS (Content Management System) designed for quick integration with ASP.NET Core applications. It allows developers to easily incorporate managed content into ASP.NET MVC Razor pages, perfect for applications requiring a _sprinkle_ of dynamic content management. This module is to use SQL Server as the data store for CMSprinkle.</Description>
+    <Copyright>Matthew D. Groves 2023-present</Copyright>
+		<Authors>Matthew D. Groves</Authors>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<RepositoryType>https://github.com/mgroves/CMSprinkle</RepositoryType>
+		<PackageTags>CMS;content</PackageTags>
+		<PackageLicenseFile>LICENSE.md</PackageLicenseFile>    
   </PropertyGroup>
 
   <ItemGroup>
