--- a/CMSprinkle.SqlServer/CMSprinkle.SqlServer.csproj
+++ b/CMSprinkle.SqlServer/CMSprinkle.SqlServer.csproj
@@ -15,6 +15,17 @@
 		<PackageLicenseFile>LICENSE.md</PackageLicenseFile>    
   </PropertyGroup>
 
+	<ItemGroup>
+	  <None Include="..\LICENSE.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.24" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
